example_Challenges/Microservice_Trust/challenge/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: x02-microservice-trust
  labels:
    app: x02-microservice-trust
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
  selector:
    app: x02-microservice-trust
